# git-remote-switch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Pipfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/git_remote_switch/: __init__.py  __main__.py  cli.py  core.py  i18n.py
tests/: __init__.py  test_cli.py  test_core.py
